--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<script src="resources/jquery.js"></script>
   	<title>Chrome Text</title>
   	<link rel="stylesheet" href="styles.css">
+  	<link href="fonts/Comfortaa/font.css" rel="stylesheet">
 
   	<!-- CodeMirror Init -->
 	<link rel="stylesheet" href="./lib/codemirror.css">
@@ -21,25 +22,38 @@
 	<script src="./addon/fold/foldcode.js"></script>
 	<script src="./addon/fold/brace-fold.js"></script>
 	<script src="./mode/javascript/javascript.js"></script>
+	<script src="./mode/python/python.js"></script>
+	<script src="./mode/css/css.js"></script>
+	<script src="./mode/sass/sass.js"></script>
+	<script src="./mode/sas/sas.js"></script>
+	<script src="./mode/htmlmixed/htmlmixed.js"></script>
+	<script src="./mode/php/php.js"></script>
 	<script src="./keymap/sublime.js"></script>
 	<style type="text/css">
-	  .CodeMirror {border-top: 1px solid #eee; border-bottom: 1px solid #eee; line-height: 1.3; height: 500px}
+	  .CodeMirror {line-height: 1.3; height: 500px}
 	  .CodeMirror-linenumbers { padding: 0 8px; }
 
 	  .title {
 	  	position: absolute;
 	  	top: 5px;
-	  	left: 10px;
-	  	font-size: 26pt;
-	  	font-family: "Helvetica Neue";
+	  	left: 30px;
+	  	font-size: 24pt;
 	  }
 	</style>
+	<link rel="stylesheet" type="text/css" href="editor/editor.css">
 </head>
 
 <body>
   <div class="webkit-region">
-  	<div class="title">Chrome Text</div>
+  	<div class="title">Explore</div>
+  	<center><span class="fn"></span></center>
   </div>
+
+  <div class="sidebar">
+
+  </div>
+
+  <div class="nofile"></div>
 
   <script src="editor.js"></script>
 </body>
